[package]
name = "r5t-controller"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r5t-core = { path = "../r5t-core" }
tokio = { version = "1.0.1", features = ["full"] }
futures = "0.3.8"
kube = "0.58.1"
kube-runtime = "0.58.1"
k8s-openapi = { version = "0.12.0", default-features = false, features = [
    "v1_21",
] }
redis = "0.20.1"
serde_json = "1.0"
