[package]
name = "rft-controller"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rft-core = { path = "../rft-core" }
tokio = { version = "1.0.1", features = ["full"] }
futures = "0.3.8"
kube = "0.59.0"
kube-runtime = "0.59.0"
k8s-openapi = { version = "0.13.0", default-features = false, features = [
    "v1_22",
] }
redis = "0.21.1"
serde_json = "1.0"
