[package]
name = "rft-gateway"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rft-core = { path = "../rft-core" }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
redis = "0.20.1"
serde_json = "1.0"
